<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common___accept">Accept</string>
    <string name="common___add">Add</string>
    <string name="common___allow">Allow</string>
    <string name="common___app_name_store">국방모바일보안</string>
    <string name="common___app_name_store_mfl">For LG</string>
    <string name="common___app_name_store_mfs">For Samsung</string>
    <string name="common___app_name_store_officer">국방모바일보안(직원)</string>
    <string name="common___app_name_store_visitor">국방모바일보안(외부인)</string>
    <string name="common___auth">Authenticate</string>
    <string name="common___back">Back</string>
    <string name="common___cancel">Cancel</string>
    <string name="common___check_in">Check In</string>
    <string name="common___check_in_2nd">Check In - 2nd</string>
    <string name="common___check_out">Check Out</string>
    <string name="common___close">Close</string>
    <string name="common___close_not_again">Never see again</string>
    <string name="common___complete">Complete</string>
    <string name="common___confirm">Confirm Complete</string>
    <string name="common___delete">Delete</string>
    <string name="common___delete_mmsa">국방모바일보안앱 삭제</string>
    <string name="common___deny">Deny</string>
    <string name="common___disable">Disable</string>
    <string name="common___enable">Enable</string>
    <string name="common___enrollment">Register</string>
    <string name="common___fix">Fix</string>
    <string name="common___info">Info</string>
    <string name="common___install">Install</string>
    <string name="common___invalid_app_not_installed_integrity">보안앱 무결성이 훼손되었습니다.</string>
    <string name="common___invalid_app_not_installed_store">Play스토어를 통해 앱을 설치하시기 바랍니다.</string>
    <string name="common___invalid_app_signature_failed">미인증 앱입니다. Play스토어를 통해 다시 설치하시기 바랍니다.</string>
    <string name="common___kkee">mnd</string>
    <string name="common___kkyyee">mdm</string>
    <string name="common___next">Next</string>
    <string name="common___no">No</string>
    <string name="common___normal">Normal</string>
    <string name="common___off">off</string>
    <string name="common___ok">OK</string>
    <string name="common___on">on</string>
    <string name="common___open">Open</string>
    <string name="common___previous">Previous</string>
    <string name="common___reRegist">Re-Registration</string>
    <string name="common___ready">Ready</string>
    <string name="common___receive_data">Receive</string>
    <string name="common___refresh">Refresh</string>
    <string name="common___refuse">Refuse</string>
    <string name="common___remove">Remove</string>
    <string name="common___request">Request</string>
    <string name="common___request_again">Request again</string>
    <string name="common___request_sms">요청코드(문자) 전송</string>
    <string name="common___retry">Retry</string>
    <string name="common___rooting">Rooting</string>
    <string name="common___select">Select</string>
    <string name="common___send">Send</string>
    <string name="common___send_data">Send</string>
    <string name="common___sending">Send</string>
    <string name="common___setting">Preference</string>
    <string name="common___share">Share</string>
    <string name="common___size">Size</string>
    <string name="common___unknown">Unknown</string>
    <string name="common___unrooting">Unrooting</string>
    <string name="common___unused">Unused</string>
    <string name="common___update">Update</string>
    <string name="common___urgent">Urgent</string>
    <string name="common___used">Used</string>
    <string name="common___version">Version</string>
    <string name="common___view">View</string>
    <string name="common___yes">Yes</string>
    <string name="common_accessibility_activity_description_markany">국방모바일보안앱에 권한(접근성 서비스)이 필요합니다. 국방모바일보안앱 보호(삭제 방지)를 위한 목적 이외의 권한 사용을 하지 않습니다.</string>
    <string name="common_accessibility_activity_description_markany_sub">위의 순서와 같이 설정하시기 바랍니다.\10</string>
    <string name="common_accessibility_allow_complete_common">접근성 서비스 활성화 완료 되었습니다.</string>
    <string name="common_accessibility_deny_app_delete_message">국방모바일보안앱이 카메라 차단 상태에서는 사용할 수 없는 메뉴입니다.</string>
    <string name="common_accessibility_deny_message_common">카메라 차단 상태에서는 사용할 수 없는 기능입니다.</string>
    <string name="common_accessibility_description">국방모바일보안은 앱 보호(삭제 방지)를 위한 목적 이외의 권한 사용을 사용하지 않습니다.</string>
    <string name="common_accessibility_key_factory_reset_1">휴대폰 초기화</string>
    <string name="common_accessibility_key_factory_reset_2">공장 초기화</string>
    <string name="common_accessibility_key_factory_reset_3">factory reset</string>
    <string name="common_accessibility_key_factory_reset_4">모든 데이터 삭제</string>
    <string name="common_accessibility_key_factory_reset_5">휴대전화 초기화</string>
    <string name="common_app_remove_fail_message_common">카메라 차단 상태에서는 국방모바일보안앱 삭제가 불가능합니다.</string>
    <string name="common_app_remove_message_common">카메라 허용 상태에서는 국방모바일보안앱 삭제가 가능합니다.</string>
    <string name="common_app_remove_request_message_common">국방모바일보안 앱 삭제하시겠습니까?\10앱 삭제를 진행하면 설치코드가 삭제되어 앱을 다시 설정해야 합니다.</string>
    <string name="common_app_secondarea_message_common">기능 허용 상태는 모든 기능 사용이 가능합니다.</string>
    <string name="common_call_center_title">고객지원센터</string>
    <string name="common_call_center_phone">02) 6424 - 5282 ~ 5284</string>
    <string name="common_call_center">고객지원센터\n02) 6424 - 5282 ~ 5284</string>
    <string name="common_device_admin___description">Please Enable Device Manager.</string>
    <string name="common_device_admin_description_store">휴대전화의 카메라 사용을 제어합니다.\10\10------------------------------------------------------------------------\10모든 데이터 삭제 권한은 휴대전화 공장 초기화를 금지하는 용도로만 사용합니다.\10------------------------------------------------------------------------</string>
    <string name="common_device_admin_description_store_officer">휴대전화의 카메라 및 부가기능(녹음, USB, 테더링, WIFI) 사용을 제어합니다.\10\10------------------------------------------------------------------------\10모든 데이터 삭제 권한은 휴대전화 공장 초기화를 금지하는 용도로만 사용합니다.\10------------------------------------------------------------------------</string>
    <string name="common_dialog_msg_description_exit">SmartManager range is within 1m. If the SmartManager does not recognize the phone, please place your phone closer.</string>
    <string name="common_dialog_msg_description_visit">SmartManager range is within 1m. If the SmartManager does not recognize the phone, please place your phone closer.</string>
    <string name="common_dialog_title_msg">TIP</string>
    <string name="common_dialog_title_qrcode">Remove GateKeeper through QR Code</string>
    <string name="common_dialog_title_qrcode_dsc">Remove GateKeeper through Mobile QR Code</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="drawer_menu_log">로그보기</string>
    <string name="mndmdm_checkout_beacon_scanning_ready_desc">&gt; 비콘 인식</string>
    <string name="mndmdm_checkout_beacon_secu">카메라 허용</string>
    <string name="mndmdm_checkout_beacon_setting_desc">&gt; 비콘 인식 설정</string>
    <string name="mndmdm_common_popup_nfc_off_desc">NFC 기능을 기본모드 또는\n읽기/쓰기P2P 모드로 설정하시기 바랍니다.</string>
    <string name="mndmdm_common_popup_nfc_off_title">NFC 설정</string>
    <string name="mnfake_dialog_cancel">취소</string>
    <string name="mnfake_dialog_confirm">확인</string>
    <string name="mnfake_beacon_dialog_subtitle">카메라 허용을 위한 비콘 장치를 인식합니다.</string>
    <string name="mnfake_drawer_close">닫기</string>
    <string name="mnfake_log_back">Back</string>
    <string name="mnfake_log_edit">편집</string>
    <string name="mnfake_log_save">저장</string>
    <string name="mnfake_log_edit_hint">block,2025-07-16 14:30:00,카메라 차단 | 수동,1.2.3</string>
    <string name="mnfake_log_empty">No entries yet.</string>
</resources>